Bugfix. Text after browse button not visible in add media popup.

--- a/css-1.5.2/style.css
+++ b/css-1.5.2/style.css
@@ -1602,6 +1602,9 @@ table.table-census-assistant th {font-weight: bold;text-align: left}
 #edit_interface-page .cens_data .descriptionbox a:hover{color:#767676}
 #edit_interface-page .cens_data input {background-color:#FFFFDE !important;font-size:12px !important}
 
+/* Add media popup */
+#addmedia-page input{color:#e2e2e2;font-size:11px}
+
 /* Historical Facts */
 label[for=checkbox_histo]{font-size:11px}
 
